Implementa comunicação front-end/back-end para gerar plano (simulado) e corrige CORS

--- a/home.html
+++ b/home.html
@@ -10,7 +10,14 @@
     <div class="container">
         <h1>Bem-vindo(a) à Plataforma!</h1>
         <p>Você está logado.</p>
-        <button id="botao-logout">Sair (Logout)</button>
+
+        <hr> <h2>Plano de Estudos IA</h2>
+        <button id="botao-gerar-plano">Gerar Plano de Estudos</button>
+        <div id="area-plano-estudos" style="margin-top: 20px; padding: 10px; border: 1px solid #eee;">
+            <p>Clique no botão acima para gerar seu plano.</p>
+        </div>
+
+        <hr> <button id="botao-logout" style="margin-top: 20px;">Sair (Logout)</button>
     </div>
     <script type="module" src="app.js"></script>
 </body>
