Implementa listagem e visualização de planos de estudo salvos do Firestore

--- a/home.html
+++ b/home.html
@@ -66,6 +66,15 @@
         <div id="area-plano-estudos" style="margin-top: 20px; padding: 10px; border: 1px solid #eee;">
             <p>Preencha os campos acima e clique em "Gerar Plano de Estudos".</p>
         </div>
+
+        <hr style="margin-top: 30px;">
+
+        <div id="secao-planos-salvos" style="margin-top: 20px;">
+            <h2>Meus Planos de Estudo Salvos</h2>
+            <ul id="lista-planos-salvos" style="list-style: none; padding-left: 0;">
+                <p id="mensagem-sem-planos">Nenhum plano salvo ainda. Gere um novo plano acima!</p>
+            </ul>
+        </div>
         
         <hr> 
         <button id="botao-logout" style="margin-top: 20px;">Sair (Logout)</button>
