--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,10 +41,11 @@
                 <a href="#" class="nav-item"> <i class="fas fa-book-open"></i>
                     <span>Exercícios</span>
                 </a>
-                <a href="#" class="nav-item"> <i class="fas fa-file-alt"></i>
+                <a href="#" class="nav-item">
+                    <i class="fas fa-file-alt"></i>
                     <span>Correção de Textos</span>
                 </a>
-                <a href="#" class="nav-item"> <i class="fas fa-bullseye"></i>
+                <a href="dicas-estrategicas.html" class="nav-item"> <i class="fas fa-bullseye"></i>
                     <span>Dicas Estratégicas</span>
                 </a>
             </nav>
@@ -89,19 +90,22 @@
                             <div class="feature-icon green"><i class="fas fa-book-open"></i></div>
                             <div class="feature-info"><h3>Exercícios Inteligentes</h3><p>Pratique com questões adaptadas ao seu nível</p></div>
                         </div>
-                        <a href="#" class="btn btn-primary btn-full">Acessar</a> </div>
+                        <a href="#" class="btn btn-primary btn-full">Acessar</a>
+                    </div>
                     <div class="feature-card">
                         <div class="feature-header">
                             <div class="feature-icon purple"><i class="fas fa-file-alt"></i></div>
                             <div class="feature-info"><h3>Correção de Textos</h3><p>Tenha suas redações corrigidas pela IA</p></div>
                         </div>
-                        <a href="#" class="btn btn-primary btn-full">Acessar</a> </div>
+                        <a href="#" class="btn btn-primary btn-full">Acessar</a>
+                    </div>
                     <div class="feature-card">
                         <div class="feature-header">
                             <div class="feature-icon orange"><i class="fas fa-bullseye"></i></div>
                             <div class="feature-info"><h3>Dicas Estratégicas</h3><p>Receba orientações personalizadas para sua aprovação</p></div>
                         </div>
-                        <a href="#" class="btn btn-primary btn-full">Acessar</a> </div>
+                        <a href="dicas-estrategicas.html" class="btn btn-primary btn-full">Acessar</a>
+                    </div>
                 </div>
 
                 <div class="activity-card">
@@ -118,5 +122,7 @@
         <div class="sidebar-overlay" id="sidebarOverlay"></div>
     </div>
 
-    <script src="dashboard.js"></script> <script type="module" src="app.js"></script> </body>
+    <script src="dashboard.js"></script> 
+    <script type="module" src="app.js"></script> 
+</body>
 </html>
