FIX: Reestrutura app.js e corrige bugs de logout, dados e funcionalidades

--- a/home.html
+++ b/home.html
@@ -11,7 +11,15 @@
     <div class="dashboard-layout">
         <header class="dashboard-header">
             <div class="header-content">
-                <div class="header-left"><button class="sidebar-toggle" id="sidebarToggle"><i class="fas fa-bars"></i></button><div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div></div>
+                <div class="header-left">
+                    <button class="sidebar-toggle" id="sidebarToggle"><i class="fas fa-bars"></i></button>
+                    <a href="home.html" style="text-decoration: none; color: inherit;">
+                        <div class="logo">
+                            <i class="fas fa-book-open"></i>
+                            <span>ConcursoIA</span>
+                        </div>
+                    </a>
+                </div>
                 <div class="header-right">
                     <a href="meu-perfil.html" class="btn btn-ghost"> <i class="fas fa-user"></i><span>Meu Perfil</span></a>
                     <button id="botao-logout" class="btn btn-ghost"><i class="fas fa-sign-out-alt"></i><span>Sair</span></button>
