--- a/login.html
+++ b/login.html
@@ -8,12 +8,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="login-page"> <div class="login-container"> <div class="login-card">
+    <div class="login-page">
+        <div class="login-container">
+            <div class="login-card">
                 <div class="login-header">
-                    <div class="logo">
-                        <i class="fas fa-book-open"></i>
-                        <span>ConcursoIA</span>
-                    </div>
+                    <div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div>
                     <h1>Entrar no ConcursoIA</h1>
                     <p>Faça login para acessar sua conta</p>
                 </div>
@@ -28,12 +27,10 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-full">Entrar</button>
                 </form>
-                
                 <div class="login-footer">
                     <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
-                    <p><a href="#" id="forgotPasswordLink">Esqueci minha senha</a></p>
-                    <div class="back-link">
-                        <a href="index.html">← Voltar para o Início</a> </div>
+                    <p><a href="#">Esqueci minha senha</a></p> 
+                    <div class="back-link"><a href="index.html">← Voltar para o Início</a></div>
                 </div>
             </div>
         </div>
